--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
         <div class="container">
           <h2 class="visually-hidden">Наши принцыпы</h2>
           <ul class="list advantage">
-            <li class="advantage-item advantage-item-antenna">
+            <li class="advantage-item icon-antenna">
               <h3 class="advantage-title link">Внимание к деталям</h3>
               <p class="advantage-text link">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantage-item advantage-item-clock">
+            <li class="advantage-item icon-clock">
               <h3 class="advantage-title link">Пунктуальность</h3>
               <p class="advantage-text link">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="advantage-item advantage-item-diagram">
+            <li class="advantage-item icon-diagram">
               <h3 class="advantage-title link">Планирование</h3>
               <p class="advantage-text link">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantage-item advantage-item-astronaut">
+            <li class="advantage-item icon-astronaut">
               <h3 class="advantage-title link">Современные технологии</h3>
               <p class="advantage-text link">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
