--- a/index.html
+++ b/index.html
@@ -263,6 +263,17 @@
           </ul>
         </div>
       </section>
+      <section class="section client-section">
+        <h2 class="works-title">Постоянные клиенты</h2>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
     </main>
     <footer class="footer-hero">
       <div class="container footer-container">
