--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <title lang="en">WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <div class="container header-container">
         <nav class="header-nav">
-          <a class="logo header-logo link" href="#" lang="en"><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a>
+          <a class="logo header-logo link" href="#" lang="en"
+            ><span class="logo-first link">Web</span><span class="logo-second link">Studio</span></a
+          >
           <ul class="list menu-list">
             <li class="menu-item"><a class="menu-link link current" href="#">Студия</a></li>
             <li class="menu-item">
@@ -26,10 +37,18 @@
         </nav>
         <ul class="list adress-list">
           <li class="adress-item">
-            <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="adress-link link" href="mailto:info@devstudio.com">
+              <svg class="adress-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="adress-item">
-            <a class="adress-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="adress-link link" href="tel:+380961111111">
+              <svg class="adress-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -97,13 +116,13 @@
           <h2 class="works-title">Чем мы занимаемся</h2>
           <ul class="list works-list">
             <li class="works-item">
-              <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294"/>
+              <img src="./images/img1.jpg" alt="Работа на клавиатуре" width="370" height="294" />
             </li>
             <li class="works-item">
-              <img src="./images/img2.jpg" alt="Монитор" width="370" height="294"/>
+              <img src="./images/img2.jpg" alt="Монитор" width="370" height="294" />
             </li>
             <li class="works-item">
-              <img src="./images/img3.jpg" alt="Планшет" width="370" height="294"/>
+              <img src="./images/img3.jpg" alt="Планшет" width="370" height="294" />
             </li>
           </ul>
         </div>
@@ -113,44 +132,49 @@
           <h2 class="works-title">Наша команда</h2>
           <ul class="list team-list">
             <li class="team-item">
-              <img src="./images/ИгорьДемьяненко.jpg" alt="Игорь Демьяненко" width="270" height="260"/>
+              <img
+                src="./images/ИгорьДемьяненко.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
               <div class="team-item-container">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-position" lang="en">Product Designer</p>
                 <ul class="list social-list">
-                <li class="social-item">
-                  <a href="" class="link social-link">
-                    <svg class="social-icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a href="" class="link social-link">
-                    <svg class="social-icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a href="" class="link social-link">
-                    <svg class="social-icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a href="" class="link social-link">
-                    <svg class="social-icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link social-link">
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <img src="./images/ОльгаРепина.jpg" alt="Ольга Репина" width="270" height="260"/>
+              <img src="./images/ОльгаРепина.jpg" alt="Ольга Репина" width="270" height="260" />
               <div class="team-item-container">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-position" lang="en">Frontend Developer</p>
@@ -187,7 +211,12 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/НиколайТарасов.jpg" alt="Николай Тарасов" width="270" height="260"/>
+              <img
+                src="./images/НиколайТарасов.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
               <div class="team-item-container">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-position" lang="en">Marketing</p>
@@ -264,33 +293,102 @@
         </div>
       </section>
       <section class="section client-section">
-        <h2 class="works-title">Постоянные клиенты</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <div class="container">
+          <h2 class="works-title">Постоянные клиенты</h2>
+          <ul class="list client-list">
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo1"></use>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo2"></use>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo3"></use>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo4"></use>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo5"></use>
+              </svg>
+            </li>
+            <li class="client-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-hero">
       <div class="container footer-container">
-        <a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html" lang="en"
+          ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
+        >
         <address class="address">
           <ul class="footer-adress list">
             <li class="footer-item">
-              <a class="footer-address-link link" href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+              <a
+                class="footer-address-link link"
+                href="https://goo.gl/maps/7NXjb8yNVrLGPsfN6"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
             <li class="footer-item">
-              <a class="footer-address-list link" href="mailto:info@example.com">info@example.com</a>
+              <a class="footer-address-list link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
             </li>
             <li class="footer-item">
               <a class="footer-address-list link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
           </ul>
         </address>
+        <div>
+          <p class="connect-text">присоединяйтесь</p>
+          <ul class="list connect-list">
+            <li class="connect-item">
+              <a href="" class="link connect-link">
+                <svg class="connect-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="connect-item">
+              <a href="" class="link connect-link">
+                <svg class="connect-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="connect-item">
+              <a href="" class="link connect-link">
+                <svg class="connect-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="connect-item">
+              <a href="" class="link connect-link">
+                <svg class="connect-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
