--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
           <li class="adress-item">
             <a class="adress-link link" href="mailto:info@devstudio.com">
               <svg class="adress-icon" width="16px" height="12px">
-                <use href="./images/icons.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a>
           </li>
           <li class="adress-item">
             <a class="adress-link link" href="tel:+380961111111">
               <svg class="adress-icon" width="10px" height="16px">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
