--- a/index.html
+++ b/index.html
@@ -36,19 +36,18 @@
           </ul>
         </nav>
         <ul class="list adress-list">
-          <li class="adress-item">
-            <a class="adress-link link" href="mailto:info@devstudio.com">
-              <svg class="adress-icon" width="16px" height="12px">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>info@devstudio.com</a>
-          </li>
-          <li class="adress-item">
-            <a class="adress-link link" href="tel:+380961111111">
-              <svg class="adress-icon" width="10px" height="16px">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </div>
+            <li class="adress-item">
+              <a class="adress-link link" href="mailto:info@devstudio.com">
+                <svg class="adress-icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+            </li>
+            <li class="adress-item">
+              <a class="adress-link link" href="tel:+380961111111">
+                <svg class="adress-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
     </header>
     <main>
       <section class="hero">
@@ -294,34 +293,42 @@
           <h2 class="works-title">Постоянные клиенты</h2>
           <ul class="list client-list">
             <li class="client-item">
+              <a href="" class="client-link">
               <svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo1"></use>
               </svg>
+            </a>
             </li>
             <li class="client-item">
-              <svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo2"></use>
               </svg>
+            </a>
             </li>
             <li class="client-item">
-              <svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo3"></use>
               </svg>
+            </a>
             </li>
             <li class="client-item">
-              <svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo4"></use>
               </svg>
+            </a>
             </li>
             <li class="client-item">
-              <svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo5"></use>
               </svg>
+            </a>
             </li>
             <li class="client-item">
-              <svg class="client-icon" width="106" height="60">
+              <a href="" class="client-link"><svg class="client-icon" width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo6"></use>
               </svg>
+            </a>
             </li>
           </ul>
         </div>
@@ -329,10 +336,9 @@
     </main>
     <footer class="footer-hero">
       <div class="container footer-container">
-        <a class="logo footer-logo" href="./index.html" lang="en"
-          ><span class="logo-first">Web</span><span class="logo-third">Studio</span></a
-        >
-        <address class="address">
+        <div class="address-container">
+          <a class="logo footer-logo" href="./index.html" lang="en"><span class="logo-first">Web</span><span class="logo-third">Studio</span></a>
+          <address class="address">
           <ul class="footer-adress list">
             <li class="footer-item">
               <a
@@ -353,7 +359,8 @@
             </li>
           </ul>
         </address>
-        <div>
+      </div>
+      <div class="join-container">
           <p class="connect-text">присоединяйтесь</p>
           <ul class="list connect-list">
             <li class="connect-item">
